--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: sinopac_get_price
+    name: sinopac-get-price
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt"
